hphp/test/slow/compilation/1319.php.expectf

Fatal error: Cannot pass parameter 1 by reference in %s/test/slow/compilation/1319.php on line 9
